Add favicon and update contact email
Added a favicon link and updated the contact email.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <link rel="icon" type="image/png" href="favicon.png">
+  
   <title>Cyber Safety Classes</title>
   <style>
     :root {
@@ -177,7 +180,7 @@
 <div class="cta">
   <h2>Book a Cyber Safety Session</h2>
   <p>Sessions are flexible and adapted to the age and experience of participants.</p>
-  <a href="mailto:youremail@example.com">Request Information</a>
+  <a href="mailto:CyberSafetyClasses@gmail.com">Request Information</a>
 </div>
 
 <footer>
@@ -186,3 +189,4 @@
 
 </body>
 </html>
+
