Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 <div class="cta">
   <h2>Book a Cyber Safety Session</h2>
   <p>Sessions are flexible and adapted to the age and experience of participants.</p>
-  <a href="mailto:CyberSafetyClasses@gmail.com">Request Information</a>
+  <a href="mailto:cybersafetyclasses@gmail.com">Request Information</a>
 </div>
 
 <footer>
@@ -189,4 +189,5 @@
 
 </body>
 </html>
+
 
