Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -180,7 +180,10 @@
 <div class="cta">
   <h2>Book a Cyber Safety Session</h2>
   <p>Sessions are flexible and adapted to the age and experience of participants.</p>
-  <a href="mailto:cybersafetyclasses@gmail.com">Request Information</a>
+  <a href="mailto:cybersafetyclasses@gmail.com?subject=Cyber%20Safety%20Class%20Request&body=Hello,%0A%0AI%20would%20like%20more%20information%20about%20your%20cyber%20safety%20classes.%0A%0AThank%20you.">
+Request Information
+</a>
+
 </div>
 
 <footer>
@@ -189,5 +192,6 @@
 
 </body>
 </html>
+
 
 
