Enhance email button with styles and hover effects
Added email button styling and hover effects.

--- a/index.html
+++ b/index.html
@@ -180,7 +180,28 @@
 <div class="cta">
   <h2>Book a Cyber Safety Session</h2>
   <p>Sessions are flexible and adapted to the age and experience of participants.</p>
-  <a href="mailto:cybersafetyclasses@gmail.com?subject=Cyber%20Safety%20Class%20Request&body=Hello,%0A%0AI%20would%20like%20more%20information%20about%20your%20cyber%20safety%20classes.%0A%0AThank%20you.">Request Information</a>
+  <a href="mailto:cybersafetyclasses@gmail.com?subject=Cyber%20Safety%20Class%20Request&body=Hello,%0A%0AI%20would%20like%20more%20information%20about%20your%20cyber%20safety%20classes.%0A%0AThank%20you."
+   class="email-button">
+   Request Information
+</a>
+
+<style>
+.email-button {
+  display: inline-block;
+  background: var(--accent);
+  color: #000;
+  font-weight: 600;
+  text-decoration: none;
+  padding: 0.9rem 1.6rem;
+  border-radius: 999px;
+  transition: background 0.3s, transform 0.2s;
+}
+
+.email-button:hover {
+  background: #00a28e; /* slightly darker accent for hover */
+  transform: translateY(-2px);
+}
+</style>
 
 </div>
 
@@ -190,6 +211,7 @@
 
 </body>
 </html>
+
 
 
 
