Refactor index.html for improved layout and styling
Updated the HTML structure and styles for the Cyber Safety Classes page, including changes to the call-to-action button and overall layout.

--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@
 <div class="cta">
   <h2>Book a Cyber Safety Session</h2>
   <p>Sessions are flexible and adapted to the age and experience of participants.</p>
-  <a href="mailto:cybersafetyclasses@gmail.com?subject=Cyber%20Safety%20Class%20Request&body=Hello,%0A%0AI%20would%20like%20more%20information%20about%20your%20cyber%20safety%20classes.%0A%0AThank%20you."
-   class="email-button">
+  <a href="mailto:cybersafetyclasses@gmail.com?subject=Cyber%20Safety%20Class%20Request&body=Hello,%0A%0AI%20would%20like%20more%20information%20about%20your%20cyber%20safety%20classes.%0A%0AThank%20you." 
+   class="cta-button">
    Request Information
 </a>
 
 <style>
-.email-button {
+.cta-button {
   display: inline-block;
   background: var(--accent);
   color: #000;
@@ -197,11 +197,12 @@
   transition: background 0.3s, transform 0.2s;
 }
 
-.email-button:hover {
-  background: #00a28e; /* slightly darker accent for hover */
+.cta-button:hover {
+  background: #00a28e;
   transform: translateY(-2px);
 }
 </style>
+
 
 </div>
 
@@ -211,6 +212,7 @@
 
 </body>
 </html>
+
 
 
 
