--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
 <div class="cta">
   <h2>Book a Cyber Safety Session</h2>
   <p>Sessions are flexible and adapted to the age and experience of participants.</p>
-  <a href="https://mail.google.com/mail/?view=cm&fs=1&to=cybersafetyclasses@gmail.com&su=Cyber%20Safety%20Class%20Request&body=Hello,%0A%0AI%20would%20like%20more%20information%20about%20your%20cyber%20safety%20classes.%0A%0AThank%20you." 
-   class="cta-button" target="_blank" rel="noopener">
+  <a href="mailto:cybersafetyclasses@gmail.com?subject=Cyber%20Safety%20Class%20Request&body=Hello,%0A%0AI%20would%20like%20more%20information%20about%20your%20cyber%20safety%20classes.%0A%0AThank%20you." 
+   class="cta-button">
   Request Information
 </a>
 
@@ -213,6 +213,7 @@
 
 </body>
 </html>
+
 
 
 
