Fix HTML structure and update content

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <ul>
         <li>Parents who want to protect their children online</li>
         <li>Seniors learning safe internet and online banking</li>
-        <li>Students new to social media and digital platforms</li>
+        <li>Seniors new to social media and digital platforms</li>
         <li>Small business owners using email and cloud services</li>
       </ul>
     </div>
@@ -228,6 +228,7 @@
 
 </body>
 </html>
+
 
 
 
