Revise content and structure of index.html
Updated the content and structure of the Cyber Safety Classes webpage, including adjustments to the target audience and learning objectives.

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <li>Parents who want to protect their children online</li>
         <li>Seniors learning safe internet and online banking</li>
         <li>Seniors new to social media and digital platforms</li>
-        <li>Small business owners using email and cloud services</li>
+        <li>Intergenerational business owners who are looking to enhance online security practices</li>
       </ul>
     </div>
 
@@ -228,6 +228,7 @@
 
 </body>
 </html>
+
 
 
 
