--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 <body>
 
 <header>
-  <h1>Cyber Safety Classes</h1>
+  <h1>Cyber Safety Tutors</h1>
   <p>Clear, practical guidance to help people of all ages stay safe online — no technical background required.</p>
 </header>
 
@@ -223,11 +223,12 @@
 </div>
 
 <footer>
-  © 2026 Cyber Safety Classes · Educational services only
+  © 2026 Cyber Safety Tutors · Educational services only
 </footer>
 
 </body>
 </html>
+
 
 
 
