--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 </main>
 
 <div class="cta">
-  <h2>Book a Cyber Safety Session</h2>
+  <h2>Book a Cyber Safety Session With Us</h2>
   <p>Sessions are flexible and adapted to the age and experience of participants.</p>
   <a href="#" id="emailButton" class="cta-button">Request Information</a>
 
@@ -228,6 +228,7 @@
 
 </body>
 </html>
+
 
 
 
