--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
 
 <div class="cta">
   <h2>Book a Cyber Safety Session With Us</h2>
-  <p>Sessions are flexible and adapted to the age and experience of participants.</p>
-  <a href="#" id="emailButton" class="cta-button">Request Information</a>
+  <p>Want to get in touch with us?</p>
+  <a href="#" id="emailButton" class="cta-button">Email Us</a>
 
 <script>
   const button = document.getElementById('emailButton');
@@ -228,6 +228,7 @@
 
 </body>
 </html>
+
 
 
 
