Add secondary button to view courses
Added a secondary button to view courses in the call-to-action section.

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
   <h2>Book a Cyber Safety Session With Us</h2>
   <p>Want to get in touch with us?</p>
   <a href="#" id="emailButton" class="cta-button">Email Us</a>
+  <a href="courses.html" class="cta-button secondary">View Courses</a>
 
 <script>
   const button = document.getElementById('emailButton');
@@ -218,6 +219,19 @@
 }
 </style>
 
+  <style>
+.cta-button.secondary {
+  background: transparent;
+  color: white;
+  border: 2px solid white;
+  margin-left: 0.75rem;
+}
+
+.cta-button.secondary:hover {
+  background: rgba(255,255,255,0.15);
+  transform: translateY(-2px);
+}
+</style>
 
 
 </div>
@@ -228,17 +242,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
