--- a/courses.html
+++ b/courses.html
@@ -92,7 +92,7 @@
     <div class="card">
       <h2>Online or In-Person Safety Classes</h2>
       <p>
-        Structured sessions tailored for parents, seniors, and small groups,
+        Structured sessions tailored for parents, seniors and small groups,
         available online or face-to-face.
       </p>
     </div>
@@ -103,4 +103,5 @@
 
 </body>
 </html>
+
 
