--- a/courses.html
+++ b/courses.html
@@ -76,7 +76,7 @@
     <div class="card">
       <h2>Free Demo PDF</h2>
       <p>
-        A beginner-friendly guide covering common scams, password safety,
+        A beginner-friendly guide covering common scams, password safety
         and everyday online risks.
       </p>
     </div>
@@ -84,7 +84,7 @@
     <div class="card">
       <h2>Monthly Tech Help Subscription</h2>
       <p>
-        Ongoing support for questions, device issues, account security,
+        Ongoing support for questions, device issues, account security
         and safe online habits.
       </p>
     </div>
@@ -103,5 +103,6 @@
 
 </body>
 </html>
+
 
 
